Fixes Spacing

--- a/assets/styles/sections/_Wine.scss
+++ b/assets/styles/sections/_Wine.scss
@@ -50,7 +50,7 @@
 
     @include largerThan($mq-small) {
       width: 49%;
-      max-width: 450px;
+      max-width: 422px;
     }
 
     &._primary {
