--- a/assets/styles/snippets/Wine/_Description.scss
+++ b/assets/styles/snippets/Wine/_Description.scss
@@ -12,10 +12,6 @@
 
   &-Rune + &-Text {
     margin-top: 40px;
-
-    @include largerThan($mq-small) {
-      margin-top: 130px;
-    }
   }
 
   &-Text {
